# baseline-inpainting

./: .gitignore  README.md  pyproject.toml
baseline增补计划/: Occlusion Removal in Remote Sensing Images based on Deep Matrix Completion.md  目标和要求.docx
baseline增补计划/所需数据素材/block-mask素材/: 备注.rtf
baseline增补计划/所需数据素材/random-mask素材/: 备注.rtf
baseline增补计划/所需数据素材/scene素材/: 备注.rtf
configs/: ddrm_imagenet256.yml  experiments.yaml  repaint_places256.yml  repaint_places256_fast.yml
docs/: baseline_integration_checklist.md  git_sync.md  git_sync_guide.md  server_rental_template.md
scripts/: generate_paper_tables.py  smoke_ddrm.py  smoke_lama.py  smoke_mat.py  smoke_repaint.py
src/baseline_suite/: __init__.py  cli.py  config.py  experiments.py  io.py  masks.py  metrics.py  paths.py  registry.py  runner.py
src/baseline_suite/baselines/: _repo_isolation.py  base.py  ddrm.py  identity.py  lama.py  mat.py  repaint.py
