[project]
name = "baseline-suite"
version = "0.1.0"
description = "Baseline augmentation experiment suite for remote sensing inpainting"
requires-python = ">=3.12"
dependencies = [
    "easydict>=1.13",
    "imageio-ffmpeg>=0.6.0",
    "lpips>=0.1.4",
    "numpy>=2.5.1",
    "opencv-python-headless>=5.0.0.93",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "pyspng>=0.1.4",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "scikit-image>=0.26.0",
    "simple-lama-inpainting>=0.1.0",
    "timm>=1.0.27",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
]

[project.scripts]
baseline-suite = "baseline_suite.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/baseline_suite"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
